# compass

./: .gitignore  CLAUDE.md  README.md  SPEC.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 41b1b06e7c5d_add_school_id_to_audit_log.py  ccb6db26e00c_initial_schema.py  e8737f41fa88_fix_ai_recs_schema.py  edb22210cd54_add_class_id_and_check_constraint_to_.py
backend/app/: config.py  db.py  main.py  seed.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  ai_rec.py  audit_log.py  class_.py  intervention.py  school.py  score.py  student.py  subject.py  user.py
backend/app/routes/: admin.py  ai.py  audit.py  auth.py  benchmarks.py  dashboard.py  interventions.py  lookups.py  reports.py  scores.py  students.py
backend/app/schemas/: admin.py  ai.py  audit.py  auth.py  benchmark.py  dashboard.py  intervention.py  reports.py  score.py  shared.py  student.py
backend/app/services/: ai_analysis.py  audit.py  auth.py  csv_import.py  dashboard.py  mtss.py  ollama.py  reports.py
backend/app/tests/: conftest.py  test_admin.py  test_ai.py  test_audit.py  test_auth.py  test_benchmarks.py  test_dashboard.py  test_interventions.py  test_lookups.py  test_mtss.py  test_reports.py  test_scores.py  test_students.py
backend/tests/: test_ai_stream.py
deploy/: start.bat  start.sh
docs/superpowers/plans/: 2026-04-07-compass-phase1.md  2026-04-13-compass-phase3a.md  2026-04-14-compass-phase4.md  (+1 more)
frontend/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
(+49 files in other folders)
